<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rowBG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/delete"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:id="@+id/img_delete_left"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|start"
            android:contentDescription="@string/trash"
            app:srcCompat="@drawable/ic_trash"
            app:tint="@android:color/white" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/img_delete_right"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|end"
            android:contentDescription="@string/trash"
            app:srcCompat="@drawable/ic_trash"
            app:tint="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowFG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorBackground"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dadjoke_nb"
                android:textColor="@android:color/tertiary_text_dark"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/jokeText"
                app:layout_constraintEnd_toStartOf="@+id/dateText"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@android:color/tertiary_text_dark"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/jokeText"
                app:layout_constraintEnd_toEndOf="@+id/jokeText"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/jokeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="2"
                android:maxLines="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleText"
                tools:text="@tools:sample/lorem" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</FrameLayout>